@@ -9,6 +9,9 @@ More detailed changelogs can be found at
           used in addon scripts.
         Fix broken version link in ?action=about
         Make sure index pages don't offer page deletion links.
+        Upgrade Leaflet version to 1.0.3.  (Note temporary addition of
+          .leaflet-container to openguides-base.css - you may wish to include
+          this in your own CSS.)
 
 0.82    05 June 2016
         Add some extra CSS hooks to the templates.  Add new base stylesheet
